update client user

--- a/app/index.html
+++ b/app/index.html
@@ -363,11 +363,11 @@
                             <div class="flex-col pad-left-12 flex-growth-2">
                                 <span class="font-verdana--geneva post__owner">gaughegom</span>
                                 <span class="edit__mode">
-                                    <i class="fas fa-unlock-alt"></i>
-                                    <i class="fas fa-users" style="display: none;"></i>
+                                    <i id="mode-selected" class="fas fa-unlock-alt"></i>
+                                    <!-- <i class="fas fa-users" style="display: none;"></i> -->
                                     <ul class="mode-list box-shadow-6 font-rajdhani">
-                                        <li class="mode-select">Private</li>
-                                        <li class="mode-select">Public</li>
+                                        <li id="mode-private" class="mode-select">Private</li>
+                                        <li id="mode-public" class="mode-select">Public</li>
                                     </ul>
                                 </span>
                             </div>
