--- a/app/recover-pw.html
+++ b/app/recover-pw.html
@@ -10,19 +10,21 @@
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/recover-pw.css">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 </head>
 <body>
     <div class="overlay">
         <form class="form__recover box-shadow-6 font-rajdhani" action="" method="POST">
             <div class="form__recover-group">
                 <label for="email">Email</label>
-                <input class="form__recover-input" type="email">
+                <input class="form__recover-input" type="email" name="email">
             </div>
             <div class="form__recover-group">
                 <span class="form__recover-message"></span>
             </div>
-            <button class="recover__button font-rajdhani">Lấy lại mật khẩu</button>
+            <button id="submit-email" class="recover__button font-rajdhani">Lấy lại mật khẩu</button>
         </form>
     </div>
+    <script src="./assets/js/recover-pw.js"></script>
 </body>
 </html>
